<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Simple Loan Calculator</string>
    <string name="app_desc">The Simple calculator for annuity, differentiated and fixed payments.</string>
    <string name="amount">Loan amount</string>
    <string name="amountHint">amount &gt; 0</string>
    <string name="interest">Annual interest rate, %</string>
    <string name="interestHint">rate &gt; 0</string>
    <string name="period">Period</string>
    <string name="calc">Calculate</string>
    <string name="MonthlyAmountLbl">Monthly payment</string>
    <string name="IterestTotalLbl">Total interest</string>
    <string name="AmountTotalLbl">Total amount (amount + interest)</string>
    <string name="errorAmount">Please enter a correct amount</string>
    <string name="errorFixedAmount">Please enter a correct fixed monthly amount</string>
    <string name="errorInterest">Please enter a correct annual interest rate</string>
    <string name="errorPeriod">Please enter a correct period</string>
    <string name="type">Type of loan</string>
    <string-array name="types">
        <item>Annuity payments</item>
        <item>Differentiated</item>
        <item>Fixed payments</item>
    </string-array>

    <string-array name="shorttypes">
        <item>Annuity</item>
        <item>Different</item>
        <item>Fixed</item>
    </string-array>
    <string name="fixedPayment">Fixed payment</string>
    <string name="paymentsCount">Quantity of payments</string>
    <string name="schedule">Schedule</string>
    <string name="paymentNr">Nr</string>
    <string name="paymentBalance">Balance</string>
    <string name="paymentPrincipal">Principal</string>
    <string name="paymentInterest">Interest</string>
    <string name="paymentCommission">Commission</string>
    <string name="paymentTotal">Payment</string>
    <string name="close">Close</string>
    <string name="scheduleTitle">Loan schedule</string>
    <string name="typeHelpLbl">Help</string>
    <string name="annuityTitleHelp">Annuity payments</string>
    <string name="diffTitleHelp">Differentiated payments</string>
    <string name="fixedTitleHelp">Fixed payments</string>
    <string name="annuityHelp">- it is a value equal to the sum of the monthly payment on the loan, which includes the
        amount of accrued interest for the loan and the amount of principal debt.
    </string>
    <string name="diffHelp">- it is a monthly loan payment, decreasing to the end of the loan term and consist of paid
        permanent share of principal debt and interest on the unpaid balance of the loan.
    </string>
    <string name="fixedHelp">- a fixed monthly repayment of principal plus a share interst for the unpaid balance of the
        loan.
    </string>
    <string name="chartTitle">The loan payment chart (beta)</string>
    <string name="chartButton">Chart</string>

    <string name="compareTitle">Loans compare</string>
    <string name="compareCleanLbl">Remove all</string>
    <string name="compareTypeLbl">Loan type:</string>
    <string name="compareAmountLbl">Amount:</string>
    <string name="compareInterestLbl">Interest, %:</string>
    <string name="compareEffectiveInterestLbl">Effective, %:</string>
    <string name="comparePeriodLbl">Period, m:</string>
    <string name="comparePaymentMaxLbl">Payment (max):</string>
    <string name="comparePaymentMinLbl">Payment (min):</string>
    <string name="compareInterestTotalLbl">Interests:</string>
    <string name="compareAmountTotalLbl">Total:</string>
    <string name="compareDownPayment">Down payment:</string>
    <string name="compareResiduePayment">Residue:</string>

    <string name="addToCompare">Add to compare</string>
    <string name="viewCompare">Compare list</string>
    <string name="exportToEmail">Export to Email</string>
    <string name="exportToExcel">Export to Excel</string>


    <string name="scheduleLoading">Loading of loan schedule, please wait....</string>
    <string name="chartAmount">Amount</string>
    <string name="chartInterest">Interest</string>
    <string name="chartTotal">Total</string>
    <string name="sendEmail">Send E-mail</string>
    <string name="fileCreated">Export file was created with name</string>

    <string name="periodTypeYear">Year</string>
    <string name="periodTypeMonth">Month</string>

    <string name="msgCalculated">Calculation success</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="recalculateLoanQuestion">Do you want recalculate loan?</string>

    <string name="tabSchedule">Schedule</string>
    <string name="tabChart">Charts</string>
    <string name="tabResult">Data</string>

    <string name="expand"> Advanced ... </string>
    <string name="hide"> Hide </string>
    <string name="downPayment">Down payment</string>
    <string name="donPaymentTotalLabel">Down payment</string>
    <string name="disposableCommission">Disposable commission</string>
    <string name="monthlyCommission">Monthly commission</string>
    <string name="commissionTotalLabel">Commission total</string>

    <string name="downPaymentHint">(value or percent from loan amount)</string>
    <string name="disposableCommissionHint">(value or percent from loan amount)</string>
    <string name="monthlyCommissionHint">(value or percent from monthly payment)</string>

    <string name="valuePercentHint">value or percent</string>

    <string name="errorDownPayment">Please enter a valid down payment or leave empty</string>
    <string name="errorDispCommission">Please enter a valid disposable commission or leave empty</string>
    <string name="errorMonthlyCommission">Please enter a valid monthly commission or leave empty</string>

    <string name="donate">Make a donation</string>
    <string name="effectiveInterestLbl">Effective rate ,%</string>
    <string name="nominalInterestLbl">Nominal rate ,%</string>
    <string name="effectiveInterestCompareLbl">Effective rate ,%</string>
    <string name="effectiveRateBtn">Eff.</string>
    <string name="eff2NominalConvTitle">Enter effective rate</string>
    <string name="eff2NominalConvMessage">Calculating of nominal interest rate based on effective rate. (calculation ignores down payments and commissions)</string>

    <string name="residue">Last payment (residual payment)</string>
    <string name="residueHint">(value or percent from loan amount)</string>
    <string name="errorResidue">Please insert valid last payment (remainder)</string>
    <string name="clean">Clean form</string>
    <string-array name="percentValueTypes">
        <item>%</item>
        <item>0.00</item>
    </string-array>
    <string-array name="interestTypes">
        <item>Nominal interest rate</item>
        <item>Effective interest rate</item>
    </string-array>
    <string name="calculationResult">Calculation result</string>
    <string name="settings">Settings</string>
    <string name="interestType">Loan interest type</string>
    <string name="interestTypeTitle">Choose default interest type</string>
</resources>