<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent"
                      android:layout_height="wrap_content" android:padding="10px">


            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="@string/annuityTitleHelp" style="@style/Help.Title"/>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="@string/annuityHelp" style="@style/Help.Content"/>


            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="@string/diffTitleHelp" style="@style/Help.Title"/>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="@string/diffHelp" style="@style/Help.Content"/>


            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="@string/fixedTitleHelp" style="@style/Help.Title"/>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="@string/fixedHelp" style="@style/Help.Content"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
  

