<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView" android:padding="5dp" android:fillViewport="false">
        <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/scheduleTable">
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    style="@style/Schedule.Header">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/paymentNr"
                        android:id="@+id/textView"
                        style="@style/Schedule.Header.Label"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/paymentBalance"
                        android:id="@+id/textView1"
                        style="@style/Schedule.Header.Label"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/paymentPrincipal"
                        android:id="@+id/textView2"
                        style="@style/Schedule.Header.Label"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/paymentInterest"
                        android:id="@+id/textView3"
                        style="@style/Schedule.Header.Label"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/paymentCommission"
                        android:id="@+id/textView4"
                        style="@style/Schedule.Header.Label"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/paymentTotal"
                        android:id="@+id/textView5"
                        style="@style/Schedule.Header.Label"/>
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>