<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/downPayment"
              style="@style/Advanced.Label"/>
    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/downPaymentHint"
              style="@style/Advanced.Hint"/>

    <TableLayout android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:stretchColumns="0">
        <TableRow android:layout_width="fill_parent">
            <EditText android:id="@+id/downPaymentEdit"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      style="@style/Common.Field"
                      android:inputType="numberDecimal"
                      android:hint="@string/valuePercentHint"/>
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/downPaymentType"
                    android:entries="@array/percentValueTypes"/>

        </TableRow>
    </TableLayout>

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/disposableCommission"
              style="@style/Advanced.Label"/>
    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/disposableCommissionHint"
              style="@style/Advanced.Hint"/>
    <TableLayout android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:stretchColumns="0">
        <TableRow android:layout_width="fill_parent">
            <EditText android:id="@+id/disposableCommissionEdit"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      style="@style/Common.Field"
                      android:inputType="numberDecimal"
                      android:hint="@string/valuePercentHint"/>
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/disposableCommissionType"
                    android:entries="@array/percentValueTypes"/>

        </TableRow>
    </TableLayout>

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/monthlyCommission"
              style="@style/Advanced.Label"/>
    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/monthlyCommissionHint"
              style="@style/Advanced.Hint"/>
    <TableLayout android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:stretchColumns="0">
        <TableRow android:layout_width="fill_parent">
            <EditText android:id="@+id/monthlyCommissionEdit"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      style="@style/Common.Field"
                      android:inputType="numberDecimal"
                      android:hint="@string/valuePercentHint"/>
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/monthlyCommissionType"
                    android:entries="@array/percentValueTypes" android:longClickable="false"/>

        </TableRow>
    </TableLayout>

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/residue"
              style="@style/Advanced.Label"/>
    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/residueHint"
              style="@style/Advanced.Hint"/>
    <TableLayout android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:stretchColumns="0">
        <TableRow android:layout_width="fill_parent">
            <EditText android:id="@+id/residueEdit"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      style="@style/Common.Field"
                      android:inputType="numberDecimal"
                      android:hint="@string/valuePercentHint"/>
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/residueType"
                    android:entries="@array/percentValueTypes"/>

        </TableRow>
    </TableLayout>
</LinearLayout>
