<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:padding="10dp">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:id="@+id/compareEmptyRowHeader"
                        style="@style/Compare.Empty"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/compareTypeLbl"
                        android:id="@+id/compareTypeHeader"
                        style="@style/Compare.Header"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/compareAmountLbl"
                        android:id="@+id/compareAmountHeader"
                        style="@style/Compare.Header"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/compareInterestLbl"
                        android:id="@+id/compareInterestHeader"
                        style="@style/Compare.Header"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/comparePeriodLbl"
                        android:id="@+id/comparePeriodHeader"
                        style="@style/Compare.Header"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/comparePaymentMaxLbl"
                        android:id="@+id/comparePaymentMaxHeader"
                        style="@style/Compare.Header"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/comparePaymentMinLbl"
                        android:id="@+id/comparePaymentMinHeader"
                        style="@style/Compare.Header"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/compareInterestTotalLbl"
                        android:id="@+id/compareInterestTotalHeader"
                        style="@style/Compare.Header"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/compareAmountTotalLbl"
                        android:id="@+id/compareAmountTotalHeader"
                        style="@style/Compare.Header"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <HorizontalScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/horizontalScrollView">
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:id="@+id/compareDataPlaceholder">
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>