<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView android:text="@string/MonthlyAmountLbl"
              android:layout_width="fill_parent" android:layout_height="wrap_content"
            />
    <TextView android:id="@+id/resultMonthlyPaymentText"
              android:layout_width="fill_parent" android:layout_height="wrap_content"
              android:textStyle="bold" android:text="0.00" android:gravity="right"
              android:textSize="20px" android:paddingRight="10px" android:paddingBottom="5px"
            />


    <TextView android:text="@string/IterestTotalLbl"
              android:layout_width="fill_parent" android:layout_height="wrap_content"/>
    <TextView android:id="@+id/resultIterestTotalText"
              android:layout_width="fill_parent" android:layout_height="wrap_content"
              android:textStyle="bold" android:text="0.00" android:gravity="right"
              android:textSize="20px" android:paddingRight="10px" android:paddingBottom="5px"/>

    <View android:layout_width="fill_parent" android:layout_height="1dip"/>

    <LinearLayout android:id="@+id/resultDownPaymentGroupView" android:layout_width="fill_parent"
                  android:layout_height="wrap_content" android:visibility="gone"
                  android:orientation="vertical">

        <TextView android:text="@string/donPaymentTotalLabel"
                  android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:id="@+id/resultDownPaymentTotalText"
                  android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:textStyle="bold" android:text="0.00" android:gravity="right"
                  android:textSize="20px" android:paddingRight="10px" android:paddingBottom="5px"/>

    </LinearLayout>

    <LinearLayout android:id="@+id/resultCommissionsGroupView" android:layout_width="fill_parent"
                  android:layout_height="wrap_content" android:visibility="gone"
                  android:orientation="vertical">

        <TextView android:text="@string/commissionTotalLabel"
                  android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:id="@+id/resultCommissionsTotalText"
                  android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:textStyle="bold" android:text="0.00" android:gravity="right"
                  android:textSize="20px" android:paddingRight="10px" android:paddingBottom="5px"
                />

    </LinearLayout>

    <TextView android:text="@string/effectiveInterestLbl"
              android:layout_width="fill_parent" android:layout_height="wrap_content"/>
    <TextView android:id="@+id/effectiveInterestText"
              android:layout_width="fill_parent" android:layout_height="wrap_content"
              android:textStyle="bold" android:text="0.00" android:gravity="right"
              android:textSize="20px" android:paddingRight="10px" android:paddingBottom="5px"/>


    <TextView android:text="@string/AmountTotalLbl"
              android:layout_width="fill_parent" android:layout_height="wrap_content"/>
    <TextView android:id="@+id/resultAmountTotalText"
              android:layout_width="fill_parent" android:layout_height="wrap_content"
              android:textStyle="bold" android:text="0.00" android:gravity="right"
              android:textSize="20px" android:paddingRight="10px" android:paddingBottom="5px"/>


    <TextView android:text="@string/paymentsCount"
              android:layout_width="fill_parent" android:layout_height="wrap_content"/>
    <TextView android:id="@+id/resultPeriodTotalText"
              android:layout_width="fill_parent" android:layout_height="wrap_content"
              android:textStyle="bold" android:text="0" android:gravity="right"
              android:textSize="20px" android:paddingRight="10px"/>
</LinearLayout>

